# harmony

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
doc/: system.puml
src/harmony/: core.py  formatters.py  main.py  parsers.py  utils.py  writers.py
src/harmony/data/: position_aligned_system_message.md  position_system_message.md  skills_system_message.md  system_cover_letter.md  system_strengths_weaknesses.md
src/harmony/system/: cover_letter_writer.md  position_aligned_formatter.md  position_formatter.md  resume_parser.md
tests/: test_core.py  test_formatters.py  test_parsers.py
tests/resources/: dumb.md  offer.md  position.md  resume.md
