[tool.poetry]
name = "harmony"
version = "0.1.0"
description = ""
authors = ["Tommaso Bianco <tommaso.bianco@gmail.com>"]
readme = "README.md"
packages = [{include = "harmony", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.3.6"
dacite = "^1.8.1"
python-dotenv = "^1.0.0"
tiktoken = "^0.5.1"
pydantic = "^2.5.2"
instructor = "^0.4.2"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
